Minor edit to nakuru-pt3

--- a/_posts/2021-12-02-nakuru-pt3.md
+++ b/_posts/2021-12-02-nakuru-pt3.md
@@ -23,7 +23,7 @@ author: gregorherda
 paginate: true
 ---
 
-_This is Part 3 in our series on remote sensing Nakuru's urban growth. While <a href="/nakuru-pt1/">Part 1</a> used on-screen digitisation but commercial software and <a href="/nakuru-pt2/">Part 2</a> used free tools but relied on existing land cover maps to supply the training data, Part 3 will use free and open source software as well as on-screen digitisation for collecting training data using the European Space Agency's [Sentinel Application Platform (SNAP)](https://step.esa.int/main/download/snap-download/). Don't let the name fool you: SNAP is capable of handling a dizzying array of optical sensors, not only those associated with the Sentinel missions. In addition, it really stands out by way of its intuitive user interface and clever design choices. Finally, to interactively present our results, we will make use of HoloViz's [hvPlot](https://hvplot.holoviz.org/) Python library, an easy-to-use high-level API to HoloViz' entire suit of tools._
+_This is Part 3 in our series on remote sensing Nakuru's urban growth. While <a href="/nakuru-pt1/">Part 1</a> used on-screen digitisation but commercial software and <a href="/nakuru-pt2/">Part 2</a> used free tools but relied on existing land cover maps to supply the training data, Part 3 will use free and open source software as well as on-screen digitisation for collecting training data using the European Space Agency's [Sentinel Application Platform (SNAP)](https://step.esa.int/main/download/snap-download/). Don't let the name fool you: SNAP is capable of handling a dizzying array of optical sensors, not only those associated with the Sentinel missions. In addition, it really stands out by way of its intuitive user interface and clever design choices. Finally, to interactively present our results, we will make use of HoloViz's [hvPlot](https://hvplot.holoviz.org/) Python library, an easy-to-use high-level API to HoloViz' entire suite of tools._
 
 **Downloads**: All raw Landsat scenes used in this workflow are linked in <a href="/nakuru-pt1/">Part 1</a>. The notebook can be downloaded <a href="/assets/img/uploads/2021-12-02-nakuru-pt3/tif2hvplot.ipynb">here</a>. You can download the source GeoTIFFs for the notebook and a QGIS style file <a href="/assets/img/uploads/2021-12-02-nakuru-pt3/03_final.rar">here</a>. 
 
