Minor edit to Nakuru pt3, update CV and About

--- a/_posts/2021-12-02-nakuru-pt3.md
+++ b/_posts/2021-12-02-nakuru-pt3.md
@@ -25,7 +25,7 @@ paginate: true
 
 _This is Part 3 in our series on remote sensing Nakuru's urban growth. While <a href="/nakuru-pt1/">Part 1</a> used on-screen digitisation but commercial software and <a href="/nakuru-pt2/">Part 2</a> used free tools but relied on existing land cover maps to supply the training data, Part 3 will use free and open source software as well as on-screen digitisation for collecting training data using the European Space Agency's [Sentinel Application Platform (SNAP)](https://step.esa.int/main/download/snap-download/). Don't let the name fool you: SNAP is capable of handling a dizzying array of optical sensors, not only those associated with the Sentinel missions. In addition, it really stands out by way of its intuitive user interface and clever design choices. Finally, to interactively present our results, we will make use of HoloViz's [hvPlot](https://hvplot.holoviz.org/) Python library, an easy-to-use high-level API to HoloViz' entire suite of tools._
 
-**Downloads**: All raw Landsat scenes used in this workflow are linked in <a href="/nakuru-pt1/">Part 1</a>. The notebook can be downloaded <a href="/assets/img/uploads/2021-12-02-nakuru-pt3/tif2hvplot.ipynb">here</a>. You can download the source GeoTIFFs for the notebook and a QGIS style file <a href="/assets/img/uploads/2021-12-02-nakuru-pt3/03_final.rar">here</a>. 
+**Downloads**: All raw Landsat scenes used in this workflow are linked in <a href="/nakuru-pt1/">Part 1</a>. The notebook can be downloaded <a href="/assets/img/uploads/2021-12-02-nakuru-pt3/tif2hvplot.ipynb">here</a>. You can download the source GeoTIFFs for the notebook and a QGIS style file <a href="/assets/img/uploads/2021-12-02-nakuru-pt3/03_final.rar">here</a>.
 
 - [Import, resampling and subsetting - SNAP](#import-resampling-and-subsetting---snap)
 - [Supervised classification and recoding - SNAP/QGIS with GRASS](#supervised-classification-and-recoding---snapqgis-with-grass)
@@ -116,7 +116,7 @@ The approach to symbology and legend creation is similar to what we used in the 
 
 ```python
 # define the labels and corresponding colors
-color_key = {'0 - Urban': '#000000', 
+color_key = {'0 - Urban': '#000000',
              '1 - Non-urban': '#FFFF00',
              '2 - Dense vegetation': '#00CC00',
              '3 - Water': '#009EE0',
@@ -133,25 +133,25 @@ legend = gv.NdOverlay(
 
 ## Final output - hvPlot
 
-The magic of *hvPlot* is its superbly succinct syntax. After defining our plot's look and features through keyword arguments all contained in a single function call, we simply *multiply* the individual *HoloViews* objects we defined to create an [Overlay](http://holoviews.org/reference/containers/bokeh/Overlay.html), in this case consisting of the plot itself and the legend - and we're done! This is even simpler when working with tabular data or if you don't particularly care which colors you use - hvPlot will create the legend for you.
+The magic of *hvPlot* is its superbly succinct syntax. After defining our plot's look and features through keyword arguments all contained in a single function call, we simply 'multiply' the individual *HoloViews* elements we defined using the `*` operator to create an [Overlay](http://holoviews.org/reference/containers/bokeh/Overlay.html), in this case consisting of the plot itself and the legend - and we're done! This is even simpler when working with tabular data or if you don't particularly care which colors you use - hvPlot will create the legend for you.
 
 By setting the `groupby=` keyword argument, *hvPlot* is able to automatically add a slider widget allowing us to change between the `Dataset`'s three `DataArrays` along the 'time' dimension (depending on the size of your data, there may be a slight delay of a few seconds before the plot updates in a live notebook).
 
 
 ```python
-plot = ds.landcover.hvplot(groupby='time', frame_width=600, data_aspect=1, 
-                           yaxis=None, xaxis=None, 
-                           colorbar=False, cmap=[v for k, v in color_key.items()],
-                           
-                           # defining the data's CRS is only really necessary, 
+plot = ds.landcover.hvplot(groupby='time', frame_width=600, data_aspect=1,
+                           yaxis=None, xaxis=None,
+                           colorbar=False, cmap=[v for v in color_key.values()],
+
+                           # defining the data's CRS is only really necessary,
                            # if you want to add a tile layer underneath
                            crs=ccrs.UTM(36), tiles=True
                           )
 
 # We can set all of Bokeh's figure settings as part of the '.opts()' method
-layout = (plot * legend).opts(active_tools=['wheel_zoom'])
+overlay = (plot * legend).opts(active_tools=['wheel_zoom'])
 
-layout
+overlay
 ```
 ![map insert](/assets/img/uploads/2021-12-02-nakuru-pt3/final.png)
 
@@ -161,7 +161,7 @@ Finally, if we want, we can save our plot to an HTML file which, in this case, r
 
 
 ```python
-hvplot.save(layout,'nakuru-pt3.html')
+hvplot.save(overlay,'nakuru-pt3.html')
 ```
 
 So there you have it! Another free and open-source workflow for remote sensing and data visualisation.
