--- a/assets/img/uploads/2021-12-02-nakuru-pt3/tif2hvPlot.ipynb
+++ b/assets/img/uploads/2021-12-02-nakuru-pt3/tif2hvPlot.ipynb
@@ -91,13 +91,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -116,7 +109,7 @@
    "source": [
     "plot = ds.landcover.hvplot(groupby='time', frame_width=600, data_aspect=1, \n",
     "                           yaxis=None, xaxis=None, \n",
-    "                           colorbar=False, cmap=[v for k, v in color_key.items()],\n",
+    "                           colorbar=False, cmap=[v for v in color_key.values()],\n",
     "                           \n",
     "                           # defining the data's CRS is only really necessary, \n",
     "                           # if you want to add a tile layer underneath\n",
@@ -124,9 +117,9 @@
     "                          )\n",
     "\n",
     "# We can set all of Bokeh's figure settings as part of the '.opts()' method\n",
-    "layout = (plot * legend).opts(active_tools=['wheel_zoom'])\n",
+    "overlay = (plot * legend).opts(active_tools=['wheel_zoom'])\n",
     "\n",
-    "layout"
+    "overlay"
    ]
   },
   {
@@ -144,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hvplot.save(layout,'nakuru-pt3.html')"
+    "hvplot.save(overlay,'nakuru-pt3.html')"
    ]
   },
   {
